@@ -78,7 +78,7 @@ setup(
     long_description=long_description,
     
     # The projects main homepage.
-    url='https://tools.ietf.org/tools/ietfdb/browser/brance/elft/svgcheck/',
+    url='https://github.com/ietf-tools/RfcEditor/tree/master/svgcheck',
 
     # Author details
     author='Jim Schaad',
@@ -89,7 +89,7 @@ setup(
 
     # Classifiers
     classifiers = [
-        'Development Status :: 2 - Pre-Alpha',
+        'Development Status :: 3 - Alpha',
         'Intended Audience :: Other Audience',
         'Topic :: Text Processing',
         'Topic :: Text Processing :: Markup :: XML',
