@@ -1,2 +1,2 @@
-__version__  = '0.5.17'
+__version__  = '0.5.18'
 NAME = 'svgcheck'
